--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
     <head>
         <meta charset="UTF-8">
         <title>Login | Instaclone</title>
+        <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+        <!-- Remember the above link must be in <head> to make all the fonts work well -->
     </head>
     <body>
+    <!-- We use "class" here but "ID" can be used when it is a very unique item -->
         <main class="login">
             <div class="login__column">
                 <img src="images/phone.png" alt="Phone Image" title="Phone Image" class="login__phone-image" />
@@ -12,15 +15,38 @@
             <section class="login__column">
                 <div class="login__section login__sign-in">
                     <img src="images/logo.png" alt="Logo" title="Logo" class="login__logo" />
-                    <form method="GET" action="feed.html">
-                        <input type="text" name="username" placeholder="Username" required />
-                        <input type="password" name="password" placeholder="Password" required />
-                        <input type="submit" value="login" />
+                    <!-- If you change the form method below to "POST" then the login info becomes invisible after logging in -->
+                    <form method="GET" action="feed.html" class="login__form">
+                        <div class="login__input-container">
+                        <input type="text" name="username" placeholder="Username" required class="login__input" />
+                        </div>
+                        <div class="login__input-container">
+                        <input type="password" name="password" placeholder="Password" required class="login__input" />
+                        <a href="#" class="login__form-link">Forgot?</a>
+                        </div>
+                        <div class="login__input-container">
+                        <input type="submit" value="login" class="login__input login__input-btn" />
+                        </div>
                     </form>
+                    <span class="login__divider">or</span>
+                    <a class="login__fb-link" href="#">
+                    <i class="fa fa-facebook-square fa-lg" aria-hidden="true"></i>Log in with Facebook
+                    </a>
                 </div>
                 <div class="login__section login__sign-up">
+                    <span class="login__text">
+                    Don't have an account?
+                    <a href="#" class="login__link">Sign up</a>
+                    </span>
                 </div>
                 <div class="longin__section login_section--transparent login__app">
+                    <span class="login__text">
+                        Get the app.
+                    </span>
+                    <div class="login__appstores">
+                        <img src="images/ios.png" alt="iOS" title="Get the app!" class="login__appstore" />
+                        <img src="images/android.png" alt="Android" title="Get the app!" class="login__appstore" />
+                    </div>
                 </div>
             </section>
         </main>
