--- a/index.html
+++ b/index.html
@@ -50,5 +50,24 @@
                 </div>
             </section>
         </main>
+        <!-- Footer goes outside of the main -->
+        <!-- We are using unordered list and Emmet plugin for easy going. Just type the class you want to input and then press Tab key. -->
+        <footer class="footer">
+            <nav class="footer__nav">
+                <ul class="footer__list">
+                    <li class="footer__list-item"><a href="#" class="footer__link"></a>about us</li>
+                    <li class="footer__list-item"><a href="#" class="footer__link"></a>support</li>
+                    <li class="footer__list-item"><a href="#" class="footer__link"></a>blog</li>
+                    <li class="footer__list-item"><a href="#" class="footer__link"></a>prss</li>
+                    <li class="footer__list-item"><a href="#" class="footer__link"></a>api</li>
+                    <li class="footer__list-item"><a href="#" class="footer__link"></a>jobs</li>
+                    <li class="footer__list-item"><a href="#" class="footer__link"></a>privacy</li>
+                    <li class="footer__list-item"><a href="#" class="footer__link"></a>terms</li>
+                    <li class="footer__list-item"><a href="#" class="footer__link"></a>directory</li>
+                    <li class="footer__list-item"><a href="#" class="footer__link"></a>language</li>
+                </ul>
+            </nav>
+            <span class="footer__copyright">© 2017 instagram</span>
+        </footer>
     </body>
 </html>
