--- a/edit-profile.html
+++ b/edit-profile.html
@@ -3,13 +3,18 @@
     <head>
         <meta charset="UTF-8">
         <title>Edit Profile | Instaclone</title>
-        <link href="https://maxcdn.bootstrapcdn.com/font-awesome />/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+        <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
         <!-- Remember the above link must be in <head> to make all the fonts work well -->
     </head>
-    <body>
+     <body>
         <nav class="navigation">
             <a href="feed.html">
-                <img src="images/navLogo.png" alt="logo" title="logo" class="navigation__logo" />
+                <img 
+                    src="images/navLogo.png"
+                    alt="logo"
+                    title="logo"
+                    class="navigation__logo"
+                />
             </a>
             <div class="navigation__search-container">
                 <i class="fa fa-search"></i>
@@ -19,10 +24,10 @@
                 <a href="explore.html" class="navigation__link">
                     <i class="fa fa-compass"></i>
                 </a>
-                <a href="#" class="naviagation__link">
+                <a href="#" class="navigation__link">
                     <i class="fa fa-heart-o"></i>
                 </a>
-                <a href="profile.html" class="naviagtion__link">
+                <a href="profile.html" class="navigation__link">
                     <i class="fa fa-user-o"></i>
                 </a>
             </div>
@@ -33,16 +38,16 @@
         <footer class="footer">
             <nav class="footer__nav">
                 <ul class="footer__list">
-                    <li class="footer__list-item"><a href="#" class="footer__link"></a>about us</li>
-                    <li class="footer__list-item"><a href="#" class="footer__link"></a>support</li>
-                    <li class="footer__list-item"><a href="#" class="footer__link"></a>blog</li>
-                    <li class="footer__list-item"><a href="#" class="footer__link"></a>prss</li>
-                    <li class="footer__list-item"><a href="#" class="footer__link"></a>api</li>
-                    <li class="footer__list-item"><a href="#" class="footer__link"></a>jobs</li>
-                    <li class="footer__list-item"><a href="#" class="footer__link"></a>privacy</li>
-                    <li class="footer__list-item"><a href="#" class="footer__link"></a>terms</li>
-                    <li class="footer__list-item"><a href="#" class="footer__link"></a>directory</li>
-                    <li class="footer__list-item"><a href="#" class="footer__link"></a>language</li>
+                    <li class="footer__list-item"><a href="#" class="footer__link">about us</a></li>
+                    <li class="footer__list-item"><a href="#" class="footer__link">support</a></li>
+                    <li class="footer__list-item"><a href="#" class="footer__link">blog</a></li>
+                    <li class="footer__list-item"><a href="#" class="footer__link">press</a></li>
+                    <li class="footer__list-item"><a href="#" class="footer__link">api</a></li>
+                    <li class="footer__list-item"><a href="#" class="footer__link">jobs</a></li>
+                    <li class="footer__list-item"><a href="#" class="footer__link">privacy</a></li>
+                    <li class="footer__list-item"><a href="#" class="footer__link">terms</a></li>
+                    <li class="footer__list-item"><a href="#" class="footer__link">directory</a></li>
+                    <li class="footer__list-item"><a href="#" class="footer__link">language</a></li>
                 </ul>
             </nav>
             <span class="footer__copyright">© 2017 instagram</span>
