--- a/feed.html
+++ b/feed.html
@@ -32,8 +32,45 @@
                 </a>
             </div>
         </nav>
-        <main>
-            Feed
+        <main class="feed">
+            <section class="photo">
+                <header class="photo__header">
+                    <div class="photo__header-column">
+                        <img class="photo__avatar" src="images/avatar.jpg" />
+                    </div>
+                    <div class="photo__header-column">
+                        <span class="photo__username">jiyoungahn</span>
+                        <span class="photo__location">Jeju Island, Republic of Korea</span>
+                    </div>
+                </header>
+                <div class="photo__file-container">
+                    <img class="photo__file" src="images/feedPhoto.jpg" />
+                </div>
+                <div class="photo__info">
+                    <div class="photo__icons">
+                        <span class="photo__icon">
+                            <i class="fa fa-heart-o fa-lg"></i>
+                        </span>
+                        <span class="photo__icon">
+                            <i class="fa fa-comment-o fa-lg"></i>
+                        </span>
+                    </div>
+                    <span class="photo__likes">81 likes</span>
+                    <ul class="photo__comments">
+                        <li class="photo__comments">
+                            <span class="photo__comment-author">jiyoungahn</span> My first day in Jeju!
+                        </li>
+                        <li class="photo__comments">
+                            <span class="photo__comment-author">irene</span> OMG It's so beautiful
+                        </li>
+                    </ul>
+                    <span class="photo__time-ago">5 mins ago</span>
+                    <div class="photo__add-comment-container">
+                        <textarea placeholder="Add a comment..." class="photo__add-comment"></textarea>
+                        <i class="fa fa-ellipsis-h"></i>
+                    </div>
+                </div>
+            </section>
         </main>
         <footer class="footer">
             <nav class="footer__nav">
