--- a/explore.html
+++ b/explore.html
@@ -32,8 +32,25 @@
                 </a>
             </div>
         </nav>
-        <main>
-            Explore
+        <main class="explore">
+            <section class="people">
+               <ul class="people__list">
+                   <li class="people__person">
+                       <div class="people__column">
+                           <div class="people__avatar-container">
+                               <img src="images/exploreavatar.jpg" class="people__avatar" />
+                            </div>
+                            <div class="people__info">
+                                <span class="people__username">sarang</span>
+                                <span class="people__full-name">Sarang Ahn</span>
+                            </div>
+                        </div>
+                        <div class="people__column">
+                            <a href="#">Follow</a>
+                        </div>
+                    </li>
+                </ul>
+            </section>
         </main>
         <footer class="footer">
             <nav class="footer__nav">
