--- a/profile.html
+++ b/profile.html
@@ -32,8 +32,56 @@
                 </a>
             </div>
         </nav>
-        <main>
-            Profile
+        <main class="profile-container">
+            <section class="profile">
+                 <header class="profile__header">
+                     <div class="profile__avatar-container">
+                         <img 
+                             src="images/avatar.jpg"
+                             class="profile__avatar"
+                         />
+                      </div>
+                      <div class="profile__info">
+                          <div class="profile__name">
+                             <H1 class="profile__name-topname">jiyoungahn</H1>
+                             <a class="profile__name-editprofile" href="edit-profile.html" class="navigation__link">Edit Profile</a>
+                             <i class="fa fa-cog"></i>
+                          </div>
+                          <ul class="profile__numbers">
+                            <li class="profile__numbers">
+                                <span class="profile__numbers-posts">2</span> posts
+                            </li>
+                            <li class="profile__numbers">
+                                <span class="profile__numbers-followers">3</span> followers
+                            </li>
+                            <li class="profile__numbers">
+                                <span class="profile__numbers-following">4</span> following
+                            </li>
+                          </ul>
+                          <div class="profile__bio">
+                              <span class="profile__full-name">Jiyoung Ahn</span>
+                             <p class="profile__full-bio">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit rerum consequuntur aperiam, dicta delectus nihil voluptas explicabo sapiente quisquam. Eius ipsam asperiores excepturi maiores, atque voluptatum sed fuga esse molestiae.</p>
+                             <a href="#" class="profile__link">jiyoungahn.com</a>
+                         </div>
+                     </div>
+                 </header>
+                 <div class="profile__pictures">
+                     <a class="profile-picture">
+                         <img
+                             src="images/feedPhoto.jpg"
+                             class="profile-picture__picture"
+                         />
+                         <div class="profile-picture__overlay">
+                             <span class="profile-picture__number">
+                                 <i class="fa fa-heart"></i> 81
+                             </span>
+                             <span class="profile-picture__number">
+                                 <i class="fa fa-comment"></i> 2
+                             </span>
+                         </div>
+                     </a>
+                 </div>
+            </section>
         </main>
         <footer class="footer">
             <nav class="footer__nav">
