--- a/profile.html
+++ b/profile.html
@@ -43,8 +43,8 @@
                       </div>
                       <div class="profile__info">
                           <div class="profile__name">
-                             <H1 class="profile__name-topname">jiyoungahn</H1>
-                             <a class="profile__name-editprofile" href="edit-profile.html" class="navigation__link">Edit Profile</a>
+                             <h1 class="profile__title">jiyoungahn</h1>
+                             <a class="profile__name-editprofile" href="edit-profile.html">Edit Profile</a>
                              <i class="fa fa-cog"></i>
                           </div>
                           <ul class="profile__numbers">
