--- a/image-detail.html
+++ b/image-detail.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <title>Image Detail | Instaclone</title>
         <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+        <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
         <!-- Remember the above link must be in <head> to make all the fonts work well -->
     </head>
      <body>
