Image detail and connect to profile

--- a/profile.html
+++ b/profile.html
@@ -68,6 +68,7 @@
                  </header>
                  <div class="profile__pictures">
                      <a class="profile-picture">
+                     <a href="image-detail.html" class="profile-picture">
                          <img
                              src="images/feedPhoto.jpg"
                              class="profile-picture__picture"
