--- a/image-detail.html
+++ b/image-detail.html
@@ -33,8 +33,48 @@
                 </a>
             </div>
         </nav>
-        <main>
-            Image Detail
+        <main class="image-detail">
+            <section class="image">
+                <div class="image__file-container">
+                    <img 
+                        src="images/feedPhoto.jpg"
+                        class="image__file"
+                    />
+                </div>
+                <div class="image__info">
+                    <header class="image__header">
+                        <div class="image__avatar-container">
+                            <img 
+                                src="images/avatar.jpg"
+                                class="image__avatar"
+                            />
+                        </div>
+                        <div class="image__info">
+                            <span class="image__author">jiyoungahn</span>
+                            <span class="image__location">Jeju Island, Republic of Korea</span>
+                        </div>
+                    </header>
+                    <ul class="image__comments">
+                        <li class="image__comment">
+                            <span class="image__comment-author">jiyoungahn</span> Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                        </li>
+                    </ul>
+                    <div class="image__actions">
+                        <span class="image__action">
+                            <i class="fa fa-heart-o fa-lg"></i>
+                        </span>
+                        <span class="image__action">
+                            <i class="fa fa-comment-o fa-lg"></i>
+                        </span>
+                    </div>
+                    <span class="image__likes">81 likes</span>
+                    <span class="image__date">June 22, 2017</span>
+                    <div class="image__add-comment">
+                        <textarea class="image__textarea"></textarea>
+                        <i class="fa fa-ellipsis-h"></i>
+                    </div>
+                </div>
+            </section>
         </main>
         <footer class="footer">
             <nav class="footer__nav">
