--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <title>Login | Instaclone</title>
         <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+        <!-- The favicon here is from the original Instagram page. Found from the source code. -->
         <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
         <!-- Remember the above link must be in <head> to make all the fonts work well -->
     </head>
@@ -17,6 +18,7 @@
                 <div class="login__section login__sign-in">
                     <img src="images/logo.png" alt="Logo" title="Logo" class="login__logo" />
                     <!-- If you change the form method below to "POST" then the login info becomes invisible after logging in -->
+                    <!-- Be noted that GitHub will block my contents in case I use "POST". Just use "GET" here. -->
                     <form method="GET" action="feed.html" class="login__form">
                         <div class="login__input-container">
                         <input type="text" name="username" placeholder="Username" required class="login__input" />
