--- a/profile.html
+++ b/profile.html
@@ -35,54 +35,54 @@
         </nav>
         <main class="profile-container">
             <section class="profile">
-                 <header class="profile__header">
-                     <div class="profile__avatar-container">
-                         <img 
-                             src="images/avatar.jpg"
-                             class="profile__avatar"
-                         />
-                      </div>
-                      <div class="profile__info">
-                          <div class="profile__name">
-                             <h1 class="profile__title">jiyoungahn</h1>
-                             <a class="profile__name-editprofile" href="edit-profile.html">Edit Profile</a>
-                             <i class="fa fa-cog"></i>
-                          </div>
-                          <ul class="profile__numbers">
-                            <li class="profile__numbers">
-                                <span class="profile__numbers-posts">2</span> posts
+                <header class="profile__header">
+                    <div class="profile__avatar-container">
+                        <img 
+                            src="images/avatar.jpg"
+                            class="profile__avatar"
+                        />
+                    </div>
+                    <div class="profile__info">
+                        <div class="profile__name">
+                            <h1 class="profile__title">jiyoungahn</h1>
+                            <a href="edit-profile.html" class="profile__button">Edit profile</a>
+                            <i class="fa fa-cog fa-lg"></i>
+                        </div>
+                        <ul class="profile__numbers">
+                            <li class="profile__posts">
+                                <span class="profile__number">2</span> posts
                             </li>
-                            <li class="profile__numbers">
-                                <span class="profile__numbers-followers">3</span> followers
+                            <li class="profile__followers">
+                                <span class="profile__number">3</span> followers
                             </li>
-                            <li class="profile__numbers">
-                                <span class="profile__numbers-following">4</span> following
+                            <li class="profile__following">
+                                <span class="profile__number">4</span> following
                             </li>
-                          </ul>
-                          <div class="profile__bio">
-                              <span class="profile__full-name">Jiyoung Ahn</span>
-                             <p class="profile__full-bio">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit rerum consequuntur aperiam, dicta delectus nihil voluptas explicabo sapiente quisquam. Eius ipsam asperiores excepturi maiores, atque voluptatum sed fuga esse molestiae.</p>
-                             <a href="#" class="profile__link">jiyoungahn.com</a>
-                         </div>
-                     </div>
-                 </header>
-                 <div class="profile__pictures">
-                     <a class="profile-picture">
-                     <a href="image-detail.html" class="profile-picture">
-                         <img
+                        </ul>
+                        <div class="profile__bio">
+                            <span class="profile__full-name">Jiyoung Ahn</span>
+                            <p class="profile__full-bio">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit rerum consequuntur aperiam, dicta delectus nihil voluptas explicabo sapiente quisquam. Eius ipsam asperiores excepturi maiores, atque voluptatum sed fuga esse molestiae.</p>
+                            <a href="#" class="profile__link">jiyoungahn.com</a>
+                        </div>
+                    </div>
+                </header>
+                <div class="profile__pictures">
+                    <a class="profile-picture">
+                    <a href="image-detail.html" class="profile-picture">
+                        <img
                              src="images/feedPhoto.jpg"
                              class="profile-picture__picture"
-                         />
-                         <div class="profile-picture__overlay">
-                             <span class="profile-picture__number">
-                                 <i class="fa fa-heart"></i> 81
-                             </span>
-                             <span class="profile-picture__number">
-                                 <i class="fa fa-comment"></i> 2
-                             </span>
-                         </div>
-                     </a>
-                 </div>
+                        />
+                        <div class="profile-picture__overlay">
+                            <span class="profile-picture__number">
+                                <i class="fa fa-heart"></i> 81
+                            </span>
+                            <span class="profile-picture__number">
+                                <i class="fa fa-comment"></i> 2
+                            </span>
+                        </div>
+                    </a>
+                </div>
             </section>
         </main>
         <footer class="footer">
