Add a comment a little

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <!-- Remember the above link must be in <head> to make all the fonts work well -->
     </head>
     <body>
-    <!-- We use "class" here but "ID" can be used when it is a very unique item -->
+    <!-- We use "class" here but "ID" can be used when it is a very unique item. ID can't be used more than once. -->
         <main class="login">
             <div class="login__column">
                 <img src="images/phone.png" alt="Phone Image" title="Phone Image" class="login__phone-image" />
