--- a/explore.html
+++ b/explore.html
@@ -5,6 +5,7 @@
         <title>Explore | Instaclone</title>
         <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
         <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
+        <link href="css/style.css" rel="stylesheet">
         <!-- Remember the above link must be in <head> to make all the fonts work well -->
     </head>
     <body>
