--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
         <!-- The favicon here is from the original Instagram page. Found from the source code. -->
         <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
+        <link href="css/style.css" rel="stylesheet">
         <!-- Remember the above link must be in <head> to make all the fonts work well -->
     </head>
     <body>
