1st Login Section Done
Fixed Login button color issue and changed footer copyright color.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <link href="css/style.css" rel="stylesheet">
         <!-- Remember the above link must be in <head> to make all the fonts work well -->
     </head>
-    <body>
+    <body class="no-padding">
     <!-- We use "class" here but "ID" can be used when it is a very unique item. ID can't be used more than once. -->
         <main class="login">
             <div class="login__column">
@@ -29,7 +29,7 @@
                         <a href="#" class="login__form-link">Forgot?</a>
                         </div>
                         <div class="login__input-container">
-                        <input type="submit" value="login" class="login__input login__input-btn" />
+                        <input type="submit" value="Login" class="login__input login__input--btn" />
                         </div>
                     </form>
                     <span class="login__divider">or</span>
