Fixed the typo in the index
Fixed the typo in the index

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                     <li class="footer__list-item"><a href="#" class="footer__link"></a>about us</li>
                     <li class="footer__list-item"><a href="#" class="footer__link"></a>support</li>
                     <li class="footer__list-item"><a href="#" class="footer__link"></a>blog</li>
-                    <li class="footer__list-item"><a href="#" class="footer__link"></a>prss</li>
+                    <li class="footer__list-item"><a href="#" class="footer__link"></a>press</li>
                     <li class="footer__list-item"><a href="#" class="footer__link"></a>api</li>
                     <li class="footer__list-item"><a href="#" class="footer__link"></a>jobs</li>
                     <li class="footer__list-item"><a href="#" class="footer__link"></a>privacy</li>
