--- a/explore.html
+++ b/explore.html
@@ -51,6 +51,48 @@
                             <a href="#">Follow</a>
                         </div>
                     </li>
+                    <li class="people__person">
+                        <div class="people__column">
+                            <div class="people__avatar-container">
+                                <img src="images/exploreavatar.jpg" class="people__avatar" />
+                            </div>
+                            <div class="people__info">
+                                <span class="people__username">sarang</span>
+                                <span class="people__full-name">Sarang Ahn</span>
+                            </div>
+                        </div>
+                        <div class="people__column">
+                            <a href="#">Follow</a>
+                        </div>
+                    </li>
+                    <li class="people__person">
+                        <div class="people__column">
+                            <div class="people__avatar-container">
+                                <img src="images/exploreavatar.jpg" class="people__avatar" />
+                            </div>
+                            <div class="people__info">
+                                <span class="people__username">sarang</span>
+                                <span class="people__full-name">Sarang Ahn</span>
+                            </div>
+                        </div>
+                        <div class="people__column">
+                            <a href="#">Follow</a>
+                        </div>
+                    </li>
+                    <li class="people__person">
+                        <div class="people__column">
+                            <div class="people__avatar-container">
+                                <img src="images/exploreavatar.jpg" class="people__avatar" />
+                            </div>
+                            <div class="people__info">
+                                <span class="people__username">sarang</span>
+                                <span class="people__full-name">Sarang Ahn</span>
+                            </div>
+                        </div>
+                        <div class="people__column">
+                            <a href="#">Follow</a>
+                        </div>
+                    </li>
                 </ul>
             </section>
         </main>
