--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <!-- The favicon here is from the original Instagram page. Found from the source code. -->
         <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
         <link href="css/style.css" rel="stylesheet">
+        <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
         <!-- Remember the above link must be in <head> to make all the fonts work well -->
     </head>
     <body class="no-padding">
