--- a/profile.html
+++ b/profile.html
@@ -46,24 +46,24 @@
                     <div class="profile__info">
                         <div class="profile__name">
                             <h1 class="profile__title">jiyoungahn</h1>
-                            <a href="edit-profile.html" class="profile__button">Edit profile</a>
+                            <a href="edit-profile.html" class="profile__button u-fat-text">Edit profile</a>
                             <i class="fa fa-cog fa-lg"></i>
                         </div>
                         <ul class="profile__numbers">
                             <li class="profile__posts">
-                                <span class="profile__number">2</span> posts
+                                <span class="profile__number u-fat-text">2</span> posts
                             </li>
                             <li class="profile__followers">
-                                <span class="profile__number">3</span> followers
+                                <span class="profile__number u-fat-text">3</span> followers
                             </li>
                             <li class="profile__following">
-                                <span class="profile__number">4</span> following
+                                <span class="profile__number u-fat-text">4</span> following
                             </li>
                         </ul>
                         <div class="profile__bio">
-                            <span class="profile__full-name">Jiyoung Ahn</span>
+                            <span class="profile__full-name u-fat-text">Jiyoung Ahn</span>
                             <p class="profile__full-bio">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit rerum consequuntur aperiam, dicta delectus nihil voluptas explicabo sapiente quisquam. Eius ipsam asperiores excepturi maiores, atque voluptatum sed fuga esse molestiae.</p>
-                            <a href="#" class="profile__link">jiyoungahn.com</a>
+                            <a href="#" class="profile__link u-fat-text">jiyoungahn.com</a>
                         </div>
                     </div>
                 </header>
