--- a/profile.html
+++ b/profile.html
@@ -47,7 +47,7 @@
                         <div class="profile__name">
                             <h1 class="profile__title">jiyoungahn</h1>
                             <a href="edit-profile.html" class="profile__button u-fat-text">Edit profile</a>
-                            <i class="fa fa-cog fa-lg"></i>
+                            <i class="fa fa-cog fa-2x" id="cog"></i>
                         </div>
                         <ul class="profile__numbers">
                             <li class="profile__posts">
