Responsive Login and Responsive Profile
I'm not sure if I made this OK though

--- a/profile.html
+++ b/profile.html
@@ -83,6 +83,34 @@
                             </span>
                         </div>
                     </a>
+                    <a href="image-detail.html" class="profile-picture">
+                        <img
+                             src="images/feedPhoto.jpg"
+                             class="profile-picture__picture"
+                        />
+                        <div class="profile-picture__overlay">
+                            <span class="profile-picture__number">
+                                <i class="fa fa-heart"></i> 81
+                            </span>
+                            <span class="profile-picture__number">
+                                <i class="fa fa-comment"></i> 2
+                            </span>
+                        </div>
+                    </a>
+                    <a href="image-detail.html" class="profile-picture">
+                        <img
+                             src="images/feedPhoto.jpg"
+                             class="profile-picture__picture"
+                        />
+                        <div class="profile-picture__overlay">
+                            <span class="profile-picture__number">
+                                <i class="fa fa-heart"></i> 81
+                            </span>
+                            <span class="profile-picture__number">
+                                <i class="fa fa-comment"></i> 2
+                            </span>
+                        </div>
+                    </a>
                 </div>
             </section>
         </main>
