--- a/feed.html
+++ b/feed.html
@@ -52,7 +52,7 @@
                 <div class="photo__info">
                     <div class="photo__icons">
                         <span class="photo__icon">
-                            <i class="fa fa-heart-o fa-lg"></i>
+                            <i class="fa fa-heart-o heart fa-lg"></i>
                         </span>
                         <span class="photo__icon">
                             <i class="fa fa-comment-o fa-lg"></i>
@@ -90,7 +90,7 @@
                 <div class="photo__info">
                     <div class="photo__icons">
                         <span class="photo__icon">
-                            <i class="fa fa-heart-o fa-lg"></i>
+                            <i class="fa fa-heart-o heart fa-lg"></i>
                         </span>
                         <span class="photo__icon">
                             <i class="fa fa-comment-o fa-lg"></i>
@@ -130,5 +130,10 @@
             </nav>
             <span class="footer__copyright">© 2017 instagram</span>
         </footer>
+        <script
+  src="http://code.jquery.com/jquery-3.2.1.min.js"
+  integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+  crossorigin="anonymous"></script>
+        <script src="js/app.js"></script>
     </body>
 </html>
