Changed my avatar
Less scary one

--- a/feed.html
+++ b/feed.html
@@ -39,7 +39,7 @@
             <section class="photo">
                 <header class="photo__header">
                     <div class="photo__header-column">
-                        <img class="photo__avatar" src="images/avatar.jpg" />
+                        <img class="photo__avatar" src="images/newavatar.jpg" />
                     </div>
                     <div class="photo__header-column">
                         <span class="photo__username">jiyoungahn</span>
@@ -77,7 +77,7 @@
             <section class="photo">
                 <header class="photo__header">
                     <div class="photo__header-column">
-                        <img class="photo__avatar" src="images/avatar.jpg" />
+                        <img class="photo__avatar" src="images/newavatar.jpg" />
                     </div>
                     <div class="photo__header-column">
                         <span class="photo__username">jiyoungahn</span>
