--- a/image-detail.html
+++ b/image-detail.html
@@ -47,7 +47,7 @@
                     <header class="image__header">
                         <div class="image__avatar-container">
                             <img 
-                                src="images/avatar.jpg"
+                                src="images/newavatar.jpg"
                                 class="image__avatar"
                             />
                         </div>
