--- a/profile.html
+++ b/profile.html
@@ -40,7 +40,7 @@
                 <header class="profile__header">
                     <div class="profile__avatar-container">
                         <img 
-                            src="images/avatar.jpg"
+                            src="images/newavatar.jpg"
                             class="profile__avatar"
                         />
                     </div>
