--- a/edit-profile.html
+++ b/edit-profile.html
@@ -40,7 +40,7 @@
                 <header class="profile-form__header">
                     <div class="profile-form__avatar-container">
                         <img 
-                            src="images/avatar.jpg"
+                            src="images/newavatar.jpg"
                             class="profile-form__avatar"
                         />
                     </div>
