Changed/Added the pictures

--- a/explore.html
+++ b/explore.html
@@ -55,11 +55,11 @@
                     <li class="people__person">
                         <div class="people__column">
                             <div class="people__avatar-container">
-                                <img src="images/exploreavatar.jpg" class="people__avatar" />
+                                <img src="images/exploreavatar2.jpg" class="people__avatar" />
                             </div>
                             <div class="people__info">
-                                <span class="people__username">sarang</span>
-                                <span class="people__full-name">Sarang Ahn</span>
+                                <span class="people__username">davidgandy</span>
+                                <span class="people__full-name">David James Gandy</span>
                             </div>
                         </div>
                         <div class="people__column">
@@ -69,11 +69,11 @@
                     <li class="people__person">
                         <div class="people__column">
                             <div class="people__avatar-container">
-                                <img src="images/exploreavatar.jpg" class="people__avatar" />
+                                <img src="images/exploreavatar3.jpg" class="people__avatar" />
                             </div>
                             <div class="people__info">
-                                <span class="people__username">sarang</span>
-                                <span class="people__full-name">Sarang Ahn</span>
+                                <span class="people__username">kyle</span>
+                                <span class="people__full-name">Kyle Dean Massey</span>
                             </div>
                         </div>
                         <div class="people__column">
@@ -83,11 +83,11 @@
                     <li class="people__person">
                         <div class="people__column">
                             <div class="people__avatar-container">
-                                <img src="images/exploreavatar.jpg" class="people__avatar" />
+                                <img src="images/exploreavatar4.jpg" class="people__avatar" />
                             </div>
                             <div class="people__info">
-                                <span class="people__username">sarang</span>
-                                <span class="people__full-name">Sarang Ahn</span>
+                                <span class="people__username">soontofu</span>
+                                <span class="people__full-name">Soon Tofu</span>
                             </div>
                         </div>
                         <div class="people__column">
