--- a/feed.html
+++ b/feed.html
@@ -61,13 +61,54 @@
                     <span class="photo__likes">81 likes</span>
                     <ul class="photo__comments">
                         <li class="photo__comment">
-                            <span class="photo__comment-author">jiyoungahn</span>My first day in Jeju!
+                            <span class="photo__comment-author">jiyoungahn</span>At day's end.
                         </li>
                         <li class="photo__comment">
-                            <span class="photo__comment-author">irene</span>OMG It's so beautiful
+                            <span class="photo__comment-author">suji</span>So beautiful!
                         </li>
                     </ul>
-                    <span class="photo__time-ago">5 mins ago</span>
+                    <span class="photo__time-ago">10 mins ago</span>
+                    <div class="photo__add-comment-container">
+                        <textarea placeholder="Add a comment..." class="photo__add-comment"></textarea>
+                        <i class="fa fa-ellipsis-h"></i>
+                    </div>
+                </div>
+            </section>
+            <section class="photo">
+                <header class="photo__header">
+                    <div class="photo__header-column">
+                        <img class="photo__avatar" src="images/newavatar.jpg" />
+                    </div>
+                    <div class="photo__header-column">
+                        <span class="photo__username">jiyoungahn</span>
+                        <span class="photo__location">MOISO, Jeju Island, Republic of Korea</span>
+                    </div>
+                </header>
+                <div class="photo__file-container">
+                    <img class="photo__file" src="images/feedPhoto2.jpg" />
+                </div>
+                <div class="photo__info">
+                    <div class="photo__icons">
+                        <span class="photo__icon">
+                            <i class="fa fa-heart-o heart fa-lg"></i>
+                        </span>
+                        <span class="photo__icon">
+                            <i class="fa fa-comment-o fa-lg"></i>
+                        </span>
+                    </div>
+                    <span class="photo__likes">101 likes</span>
+                    <ul class="photo__comments">
+                        <li class="photo__comment">
+                            <span class="photo__comment-author">jiyoungahn</span>This was the place I spent 12 hours a day for 3 days. More fun, more pain......
+                        </li>
+                        <li class="photo__comment">
+                            <span class="photo__comment-author">ruxandra</span>Looks fun lol
+                        </li>
+                        <li class="photo__comment">
+                            <span class="photo__comment-author">dave</span>CSS sucks
+                        </li>
+                    </ul>
+                    <span class="photo__time-ago">15 mins ago</span>
                     <div class="photo__add-comment-container">
                         <textarea placeholder="Add a comment..." class="photo__add-comment"></textarea>
                         <i class="fa fa-ellipsis-h"></i>
@@ -85,7 +126,7 @@
                     </div>
                 </header>
                 <div class="photo__file-container">
-                    <img class="photo__file" src="images/feedPhoto.jpg" />
+                    <img class="photo__file" src="images/feedPhoto3.jpg" />
                 </div>
                 <div class="photo__info">
                     <div class="photo__icons">
@@ -96,16 +137,124 @@
                             <i class="fa fa-comment-o fa-lg"></i>
                         </span>
                     </div>
-                    <span class="photo__likes">81 likes</span>
+                    <span class="photo__likes">37 likes</span>
                     <ul class="photo__comments">
                         <li class="photo__comment">
-                            <span class="photo__comment-author">jiyoungahn</span>My first day in Jeju!
+                            <span class="photo__comment-author">jiyoungahn</span>The first day when I arrived. It was brilliantly sunny.
                         </li>
                         <li class="photo__comment">
-                            <span class="photo__comment-author">irene</span>OMG It's so beautiful
+                            <span class="photo__comment-author">marcellin</span>Too bad it has rained for the rest of the days.
                         </li>
                     </ul>
-                    <span class="photo__time-ago">5 mins ago</span>
+                    <span class="photo__time-ago">16 mins ago</span>
+                    <div class="photo__add-comment-container">
+                        <textarea placeholder="Add a comment..." class="photo__add-comment"></textarea>
+                        <i class="fa fa-ellipsis-h"></i>
+                    </div>
+                </div>
+            </section>
+            <section class="photo">
+                <header class="photo__header">
+                    <div class="photo__header-column">
+                        <img class="photo__avatar" src="images/newavatar.jpg" />
+                    </div>
+                    <div class="photo__header-column">
+                        <span class="photo__username">jiyoungahn</span>
+                        <span class="photo__location">Ramada Plaza, Jeju Island, Republic of Korea</span>
+                    </div>
+                </header>
+                <div class="photo__file-container">
+                    <img class="photo__file" src="images/feedPhoto4.jpg" />
+                </div>
+                <div class="photo__info">
+                    <div class="photo__icons">
+                        <span class="photo__icon">
+                            <i class="fa fa-heart-o heart fa-lg"></i>
+                        </span>
+                        <span class="photo__icon">
+                            <i class="fa fa-comment-o fa-lg"></i>
+                        </span>
+                    </div>
+                    <span class="photo__likes">99 likes</span>
+                    <ul class="photo__comments">
+                        <li class="photo__comment">
+                            <span class="photo__comment-author">jiyoungahn</span>Luckily got a deluxe room ^^
+                        </li>
+                    </ul>
+                    <span class="photo__time-ago">2 days ago</span>
+                    <div class="photo__add-comment-container">
+                        <textarea placeholder="Add a comment..." class="photo__add-comment"></textarea>
+                        <i class="fa fa-ellipsis-h"></i>
+                    </div>
+                </div>
+            </section>
+            <section class="photo">
+                <header class="photo__header">
+                    <div class="photo__header-column">
+                        <img class="photo__avatar" src="images/newavatar.jpg" />
+                    </div>
+                    <div class="photo__header-column">
+                        <span class="photo__username">jiyoungahn</span>
+                        <span class="photo__location">Ramada Plaza, Jeju Island, Republic of Korea</span>
+                    </div>
+                </header>
+                <div class="photo__file-container">
+                    <img class="photo__file" src="images/feedPhoto5.jpg" />
+                </div>
+                <div class="photo__info">
+                    <div class="photo__icons">
+                        <span class="photo__icon">
+                            <i class="fa fa-heart-o heart fa-lg"></i>
+                        </span>
+                        <span class="photo__icon">
+                            <i class="fa fa-comment-o fa-lg"></i>
+                        </span>
+                    </div>
+                    <span class="photo__likes">33 likes</span>
+                    <ul class="photo__comments">
+                        <li class="photo__comment">
+                            <span class="photo__comment-author">jiyoungahn</span>Seafood ttukbaegi. Not bad. The only tricky part of travelling alone is eating alone.
+                        </li>
+                    </ul>
+                    <span class="photo__time-ago">2 days ago</span>
+                    <div class="photo__add-comment-container">
+                        <textarea placeholder="Add a comment..." class="photo__add-comment"></textarea>
+                        <i class="fa fa-ellipsis-h"></i>
+                    </div>
+                </div>
+            </section>
+            <section class="photo">
+                <header class="photo__header">
+                    <div class="photo__header-column">
+                        <img class="photo__avatar" src="images/newavatar.jpg" />
+                    </div>
+                    <div class="photo__header-column">
+                        <span class="photo__username">jiyoungahn</span>
+                        <span class="photo__location">Ramada Plaza, Jeju Island, Republic of Korea</span>
+                    </div>
+                </header>
+                <div class="photo__file-container">
+                    <img class="photo__file" src="images/feedPhoto6.jpg" />
+                </div>
+                <div class="photo__info">
+                    <div class="photo__icons">
+                        <span class="photo__icon">
+                            <i class="fa fa-heart-o heart fa-lg"></i>
+                        </span>
+                        <span class="photo__icon">
+                            <i class="fa fa-comment-o fa-lg"></i>
+                        </span>
+                    </div>
+                    <span class="photo__likes">61 likes</span>
+                    <ul class="photo__comments">
+                        <li class="photo__comment">
+                            <span class="photo__comment-author">jiyoungahn</span>Sidecar Cocktail. Congrats, me.
+                        </li>
+                        <li class="photo__comment">
+                            <span class="photo__comment-author">irene</span>Congratulations!
+                        </li>
+                    </ul>
+                    <span class="photo__time-ago">2 days ago</span>
                     <div class="photo__add-comment-container">
                         <textarea placeholder="Add a comment..." class="photo__add-comment"></textarea>
                         <i class="fa fa-ellipsis-h"></i>
