--- a/profile.html
+++ b/profile.html
@@ -52,13 +52,13 @@
                         </div>
                         <ul class="profile__numbers">
                             <li class="profile__posts">
-                                <span class="profile__number u-fat-text">2</span> posts
+                                <span class="profile__number u-fat-text">6</span> posts
                             </li>
                             <li class="profile__followers">
-                                <span class="profile__number u-fat-text">3</span> followers
+                                <span class="profile__number u-fat-text">144</span> followers
                             </li>
                             <li class="profile__following">
-                                <span class="profile__number u-fat-text">4</span> following
+                                <span class="profile__number u-fat-text">35</span> following
                             </li>
                         </ul>
                         <div class="profile__bio">
@@ -85,26 +85,26 @@
                     </a>
                     <a href="image-detail.html" class="profile-picture">
                         <img
-                             src="images/feedPhoto.jpg"
+                             src="images/feedPhoto2.jpg"
                              class="profile-picture__picture"
                         />
                         <div class="profile-picture__overlay">
                             <span class="profile-picture__number">
-                                <i class="fa fa-heart"></i> 81
+                                <i class="fa fa-heart"></i> 101
                             </span>
                             <span class="profile-picture__number">
-                                <i class="fa fa-comment"></i> 2
+                                <i class="fa fa-comment"></i> 3
                             </span>
                         </div>
                     </a>
                     <a href="image-detail.html" class="profile-picture">
                         <img
-                             src="images/feedPhoto.jpg"
+                             src="images/feedPhoto3.jpg"
                              class="profile-picture__picture"
                         />
                         <div class="profile-picture__overlay">
                             <span class="profile-picture__number">
-                                <i class="fa fa-heart"></i> 81
+                                <i class="fa fa-heart"></i> 37
                             </span>
                             <span class="profile-picture__number">
                                 <i class="fa fa-comment"></i> 2
@@ -113,40 +113,40 @@
                     </a>
                     <a href="image-detail.html" class="profile-picture">
                         <img
-                            src="images/feedPhoto.jpg"
+                            src="images/feedPhoto4.jpg"
                             class="profile-picture__picture"
                         />
                         <div class="profile-picture__overlay">
                             <span class="profile-picture__number">
-                                <i class="fa fa-heart"></i> 81
+                                <i class="fa fa-heart"></i> 99
                             </span>
                             <span class="profile-picture__number">
-                                <i class="fa fa-comment"></i> 2
+                                <i class="fa fa-comment"></i> 1
                             </span>
                         </div>
                     </a>
                     <a href="image-detail.html" class="profile-picture">
                         <img
-                            src="images/feedPhoto.jpg"
+                            src="images/feedPhoto5.jpg"
                             class="profile-picture__picture"
                         />
                         <div class="profile-picture__overlay">
                             <span class="profile-picture__number">
-                                <i class="fa fa-heart"></i> 81
+                                <i class="fa fa-heart"></i> 33
                             </span>
                             <span class="profile-picture__number">
-                                <i class="fa fa-comment"></i> 2
+                                <i class="fa fa-comment"></i> 1
                             </span>
                         </div>
                     </a>
                     <a href="image-detail.html" class="profile-picture">
                         <img
-                            src="images/feedPhoto.jpg"
+                            src="images/feedPhoto6.jpg"
                             class="profile-picture__picture"
                         />
                         <div class="profile-picture__overlay">
                             <span class="profile-picture__number">
-                                <i class="fa fa-heart"></i> 81
+                                <i class="fa fa-heart"></i> 61
                             </span>
                             <span class="profile-picture__number">
                                 <i class="fa fa-comment"></i> 2
